[package]
name = "parking-mqtt-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
base64 = "0.21"
rumqttc = "0.24"

# OpenSSL 없이 reqwest 사용
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
